<resources>
    <string name="app_name">Hogar Animal</string>
    Strings used for fragments for navigation
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="subject" />
    <string name="message" />
    <string name="send" />
    <!--Descripcion-->
    <string name="btn_Fecha">Fecha</string>
    <string name="btn_Hora">Hora</string>
    <string name="btn_Agendar">Agendar</string>
    <string name="txt_Fecha">Fecha</string>
    <string name="txt_Hora">Hora</string>
    <!--Login-->
    <string name="btn_IniciarSesion">INICIAR SESIÓN</string>
    <string name="btn_OlvidasteC">¿Olvidó su contraseña?</string>
    <string name="btn_EresNuevo">¿Eres nuevo? Registrate!!</string>
    <string name="txt_Correo">Correo Electronico</string>
    <string name="txt_Contraseña">Contraseña</string>
    <string name="txt_Bienvenido">Bienvenido</string>
    <string name="txt_IniciaSesionPara">Inicia sesión para continuar</string>
    <!--Registro-->
    <string name="btn_Registra">REGISTRAR</string>
    <string name="btn_YaTienes">¿Ya tienes una cuenta?\n Inicia sesión!!</string>
    <string name="txt_Nombre">Nombre Completo</string>
    <string name="txt_Direccion">Dirección</string>
    <string name="txt_Telefono">Teléfono</string>
    <string name="txt_Cedula">Cédula De Ciudadanía</string>
    <string name="txt_ConfContraseña">Confirmar Contraseña</string>
    <string name="txt_Registrate">Registrate para iniciar</string>
    <!--Main-->
    <string name="txt_Para">Para</string>
    <string name="txt_Hogar">Hogar Animal</string>
    <!--Administrador-->
    <string name="Btn_Aceptar">Aceptar</string>
    <string name="Btn_Rechazar">Rechazar</string>
    <string name="txt_Solicutudes">Solicitudes De Agendamiento</string>
    <!--RecuperarContraseña-->
    <string name="Btn_Recuperar">RECUPERAR</string>
    <string name="txt_Recuperar">Recuperar Contraseña</string>
    <string name="txt_ingresaDatos">Ingresar los datos</string>
    <!--listado-->
    <string name="txt_Servicios">Servicios</string>
    <!--DescripcionVacuna-->
    <string name="txt_seleccione">Seleccione fecha y hora para el agendamiento</string>
    <string name="txt_Raza">Raza</string>
    <string name="txt_Edad">Edad</string>
    <string name="txt_Reporte">Reporte de vacunas</string>
    <string name="txt_Sintomas">¿Algun sintoma?</string>
    <!--Preguntas Frecuentes-->
    <string name="txt_titulo">Preguntas Frecuentes</string>

    <string name="txt_Pregunta1">¿Puede entrar mi perro a establecimientos públicos?</string>
    <string name="txt_res1">Salvo en el caso de perros guía, l@s dueñ@s de hoteles, restaurantes, cafeterías y similares , podrán prohibir a su criterio la entrada de animales.</string>

    <string name="txt_Pregunta2">¿Qué debo hacer si me ha mordido un animal?</string>
    <string name="txt_res2">Las personas que hayan sido agredidas o lesionadas por algún animal deben dirigirse a su médico/a que será quien decida las medidas a adoptar.</string>

    <string name="txt_Pregunta3">¿Qué debo hacer en caso de que mi perro muerda a una persona o a otro animal?</string>
    <string name="txt_res3">Todos los animales que hayan causado lesiones a una persona o a otro animal, así como los sospechosos de tal circunstancia se someterán a control veterinario municipal durante 14 días.</string>

    <string name="txt_Pregunta4">¿Cuántos perros y gatos puedo tener en mi domicilio?</string>
    <string name="txt_res4">Máximo cinco, para tener más es necesaria la autorización de los servicios competentes del Ayuntamiento.</string>

    <string name="txt_Pregunta5">¿Hay algún sitio en el que las esterilizaciones y las vacunas sean más baratas?</string>
    <string name="txt_res5">
        Cada veterinario puede establecer la tarifa que considere más oportuna en relación con las actuaciones clínicas que practica. En este grupo se incluyen, tanto la esterilización como la vacunación de los animales de compañía.
</string>

</resources>